RESOLVED FIXED27143
[Gtk][REGRESSION] XHR test failures after r45558
https://bugs.webkit.org/show_bug.cgi?id=27143
Summary [Gtk][REGRESSION] XHR test failures after r45558
Jan Alonzo
Reported 2009-07-09 23:47:43 PDT
This is a tracking bug for the three Gtk XHR test failures. Changeset: http://trac.webkit.org/changeset/45558 Gustavo reported to following libsoup bug: http://bugzilla.gnome.org/show_bug.cgi?id=587907 XHR test failures: http/tests/xmlhttprequest/access-control-basic-allow-preflight-cache.html http/tests/xmlhttprequest/cache-override.html http/tests/xmlhttprequest/small-chunks-response-text.html
Attachments
disable sniffing when requested (2.63 KB, patch)
2009-08-12 14:58 PDT, Gustavo Noronha (kov)
no flags
Jan Alonzo
Comment 1 2009-08-01 02:48:33 PDT
Gustavo Noronha (kov)
Comment 2 2009-08-12 14:58:43 PDT
Created attachment 34696 [details] disable sniffing when requested LayoutTests/ChangeLog | 11 +++++++++++ LayoutTests/platform/gtk/Skipped | 1 - WebCore/ChangeLog | 13 +++++++++++++ .../platform/network/soup/ResourceHandleSoup.cpp | 3 +++ 4 files changed, 27 insertions(+), 1 deletions(-)
Xan Lopez
Comment 3 2009-08-13 03:30:25 PDT
Comment on attachment 34696 [details] disable sniffing when requested I endorse this patch or product.
Xan Lopez
Comment 4 2009-08-13 03:31:44 PDT
*** Bug 27981 has been marked as a duplicate of this bug. ***
Eric Seidel (no email)
Comment 5 2009-08-13 09:36:45 PDT
Comment on attachment 34696 [details] disable sniffing when requested Clearing flags on attachment: 34696 Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog M LayoutTests/platform/gtk/Skipped M WebCore/ChangeLog M WebCore/platform/network/soup/ResourceHandleSoup.cpp Committed r47203 M WebCore/ChangeLog M WebCore/platform/network/soup/ResourceHandleSoup.cpp M LayoutTests/platform/gtk/Skipped M LayoutTests/ChangeLog r47203 = 185743137afcd5b2b1ee59ebdea74c5d87cbd485 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk http://trac.webkit.org/changeset/47203
Eric Seidel (no email)
Comment 6 2009-08-13 09:36:48 PDT
All reviewed patches have been landed. Closing bug.
Jan Alonzo
Comment 7 2009-08-13 11:28:28 PDT
Reopening. We still have two failing tests in this bug. The patch only fixed one.
Jan Alonzo
Comment 8 2009-08-13 21:32:07 PDT
(In reply to comment #3) > (From update of attachment 34696 [details]) > I endorse this patch or product. I reverted the patch as it made the http tests fail.
Eric Seidel (no email)
Comment 9 2009-08-13 22:56:25 PDT
Thank you. Sorry that the commit-queue (currently) has no way to test on gtk.
Jan Alonzo
Comment 10 2009-08-21 16:31:18 PDT
(In reply to comment #9) > Thank you. Sorry that the commit-queue (currently) has no way to test on gtk. This is already fixed and landed as http://trac.webkit.org/changeset/47569.
Note You need to log in before you can comment on or make changes to this bug.