2009-08-20  Jan Michael Alonzo  <jmalonzo@webkit.org>

Reviewed by Gustavo Noronha.

        [Gtk][REGRESSION] XHR test failures after r45558
        https://bugs.webkit.org/show_bug.cgi?id=27143

        http/tests/xmlhttprequest/small-chunks-response-text.html
        - Enable test fixed by this patch.

        http/tests/xmlhttprequest/access-control-basic-allow-preflight-cache.html
        http/tests/xmlhttprequest/cache-override.html
        - Enable tests already passing.

        Updated patch originally by Gustavo Noronha.

        * platform/gtk/Skipped:

        Disable sniffing if it's explicitly requested. Updated patch
        originally by Gustavo Noronha.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::statusWillBeHandledBySoup):
        (WebCore::gotHeadersCallback):
        (WebCore::contentSniffedCallback):
        (WebCore::gotChunkCallback):
        (WebCore::startHttp):

Canonical link: https://commits.webkit.org/39155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47569 268f45cc-cd09-0410-ab3c-d52691b4dbfc